Changement du titre (header) de la page index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <h1>Alien : Chronique d’un cauchemar interstellaire</h1>
+    <h1>Alien :  Une Saga Cosmique</h1>
   </header>
   
   <!-- Menu ajouté -->
